2013-08-01  Doug Evans  <dje@google.com>

	PR symtab/15695
	* valops.c (value_struct_elt): Add missing call to check_typedef.
	(value_find_oload_method_list): Ditto.

	* symtab.c (do_free_search_symbols_cleanup): Change arg to,
	effectively, struct symbol_search **.
	(make_cleanup_free_search_symbols): Change arg to struct
	symbol_search **.  All callers updated.
	(compare_search_syms): Compare symtab file name and block as well.
	(search_symbols_equal): New function.
	(sort_search_symbols_remove_dups): Renamed from sort_search_symbols.
	New args new_head, new_tail.  Result is now void.  Remove dups after
	sorting the symbols.
	(search_symbols): Sort all found symbols once, after all have been
	found, and remove duplicates.  Simplify cleanup tracking of result.
	* symtab.h (make_cleanup_free_search_symbols): Update prototype.

	Further workarounds for binutils/15021.
	* dwarf2read.c (recursively_compute_inclusions): Change type of result
	parameter to VEC (symtab_ptr) **.  New parameter all_type_symtabs.
	Watch for duplicate symtabs coming from type units.
	(compute_symtab_includes): Update call to
	recursively_compute_inclusions. Build vector of included symtabs
	instead of per_cus.
	* symtab.h (symtab_ptr): New typedef.
	(DEF_VEC_P (symtab_ptr)): New VEC type.
	* linespec.c (symtab_p): Delete.  All uses updated to use symtab_ptr
	instead.

2013-08-01  Andrew Burgess  <aburgess@broadcom.com>

	* cli/cli-script.c (script_from_file): Remove use of
	error_pre_print.
	* main.c (captured_main): Remove use of error_pre_print and
	quit_pre_print.
	* utils.c (error_pre_print, quit_pre_print): Remove.
	* utils.h (error_pre_print, quit_pre_print): Likewise.

2013-08-01  Yao Qi  <yao@codesourcery.com>

	* mi/mi-cmd-stack.c (mi_cmd_stack_list_locals): Parse argv
	with mi_getopt.
	(mi_cmd_stack_list_variables): Likewise.

2013-07-31  Andrew Burgess  <aburgess@broadcom.com>

	* exceptions.c (deprecated_throw_reason): Remove.
	* exceptions.h (deprecated_throw_reason): Remove.
