@@ -1,0 +1,46 @@
+# Copyright 2013 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+load_lib dwarf.exp
+
+# This test can only be run on targets which support DWARF-2.
+if ![dwarf2_support] {
+    return 0  
+}
+
+standard_testfile fission-mix.c fission-mix2.c
+set objfile [standard_output_file ${testfile}.o]
+set objfile2 [standard_output_file ${testfile}2.o]
+
+# Compile fission-mix.c without Fission and fission-mix2.c with Fission.
+if { [gdb_compile ${srcdir}/${subdir}/${srcfile} $objfile object {debug}] != "" } {
+    return -1
+}
+if { [gdb_compile ${srcdir}/${subdir}/${srcfile2} $objfile2 object {debug additional_flags=-gsplit-dwarf}] != "" } {
+    return -1
+}
+if {[gdb_compile "$objfile $objfile2" $binfile executable {debug}] != "" } {
+    return -1
+}
+
+clean_restart $binfile
+
+gdb_test "break main" "Breakpoint .*"
+
+# Bug 15691: gdb would crash here on an assert violation.
+# The debug info for the TU for "struct s" has already been read,
+# but gdb doesn't think so.
+# To repro the bug, --target_board=dwarf4-gdb-index, or equivalent, is needed.
+gdb_test "break func2" "Breakpoint .*"
